<resources>
    <string name="app_name">BestBooks</string>

    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="no_email">El email no está registrado</string>
    <string name="no_password">La contraseña es incorrecta</string>

    <string name="des_img">Book image</string>
    <string name="des_title">Book title</string>

    <string name="register_text">¿No tienes cuenta? ¡Registrate ahora!</string>

    <string name="title_name">Nombre usuario</string>
    <string name="title_age">Edad</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_password">Contraseña</string>
    <string name="title_password_old">Contraseña anterior </string>
    <string name="title_password_new">Contraseña nueva</string>
    <string name="title_user_img">Imagen del usuario</string>

    <string name="default_age">Edad usuario</string>
    <string name="default_username">Username usuario</string>
    <string name="default_email">Email usuario</string>

    <string name="profile_modify">Modificar Perfil</string>
    <string name="logout">Cerrar sesión</string>

    <string name="add_book">¡Crea una nueva reseña!</string>
    <string name="add_book_name">Nombre del libro</string>
    <string name="book_name">Nombre</string>
    <string name="add_book_author">Autor</string>
    <string name="add_book_year">Año de publicación</string>
    <string name="book_year">Año</string>
    <string name="add_book_rating">Valoración (del 1 al 10)</string>
    <string name="book_rating">Valoración</string>
    <string name="add_book_commentary">Comentario</string>
    <string name="add_book_img">Imagen (URL)</string>
    <string name="book_img">URL</string>
    <string name="add_book_recommend">¿Lo recomiendas?</string>
    <string name="add_book_recommend_yes">Si, lo recomiendo</string>
    <string name="add_book_recommend_no">No lo recomiendo</string>
    <string name="add_book_create">Crear</string>


    <string name="modify">Modificar</string>
    <string name="cancel">Cancelar</string>

    <string name="new_profile">¡Crea un nuevo perfil!</string>
    <string name="name_complete">Nombre y apellidos</string>
    <string name="error_register">El email ya está registrado</string>
    <string name="register">Registrarse</string>


    <string name="search_name">Titulo del libro</string>
    <string name="search">Buscar</string>
    <string name="seach_rating_menor">Buscar peores valoraciones</string>
    <string name="seach_rating_mayor">Buscar mejores valoraciones</string>

    <string name="user">Usuario:</string>
    <string name="rating">Valoración:</string>
    <string name="recommend">Recomendado:</string>
    <string name="commentary">Comentario del usuario:</string>

    <string name="modify_book">¡Modifica tu reseña!</string>


    <string name="my_books">Mis reseñas</string>
    <string name="my_favs">Mis favoritos</string>

    <string name="ic_fav">Favorito</string>
    <string name="ic_edit">Editar</string>
    <string name="ic_delete">Eliminar</string>

</resources>