<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linear_container_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profile_container_sub"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color_principal">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_account" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/profile_container_inf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_profile_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/view_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_profile_age_username"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/container_age"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_age_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/title_age"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/view_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/default_age"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_username_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/title_username"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/view_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/default_username"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_profile_email"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/view_email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/title_email"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_email"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_profile_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeP_button1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/profile_modify"
                        android:textColor="#FFFFFF" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeP_button2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:gravity="center"
                        android:text="@string/logout"
                        android:textColor="@color/red" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>