<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/container_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_search_sup"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/seach_text_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view_book"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_rating_mayor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seach_rating_mayor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.105" />

                    <Button
                        android:id="@+id/button_rating_menor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seach_rating_menor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/button_rating_mayor"
                        app:layout_constraintVertical_bias="0.695" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_search_inf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>